--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <body>
     <h1>Portfolio Site</h1>
     <p>Portfolio Site</p>
+    <p>New paragraph</p>
+    <p>Important feature</p>
 </body>
 </html>
