About page in index.html

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p>Portfolio Site</p>
     <p>New paragraph</p>
     <p>Important feature</p>
+    <p>Development in about page </p>
 </body>
 </html>
