linked css and html pages

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>New paragraph</p>
     <p>Important feature</p>
     <p>Development in about page </p>
+    <a href="./about.html">About page</a>
 </body>
 </html>
