--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>New paragraph</p>
     <p>Development in about page </p>
     <a href="./about.html">About page</a>
+    <footer>Copyright (c) 2022 danielbenard.com</footer>
 </body>
 </html>
