important paragraph. For #1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Portfolio Site</h1>
     <p>Portfolio Site</p>
+    <p>Important paragraph</p>
     <p>New paragraph</p>
     <a href="./about.html">About page</a>
     <footer>Copyright (c) 2022 danielbenard.com</footer>
