--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Portfolio Site</h1>
     <p>Portfolio Site</p>
     <p>Important paragraph</p>
+    <p>important Paragraph</p>
     <p>New paragraph</p>
     <a href="./about.html">About page</a>
     <footer>Copyright (c) 2022 danielbenard.com</footer>
