Added two important paragraphs.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <p>Portfolio Site</p>
     <p>Important paragraph</p>
     <p>important Paragraph</p>
+    <p>important paragraph 1</p>
+    <p>important paragraph 2</p>
     <p>New paragraph</p>
     <a href="./about.html">About page</a>
     <footer>Copyright (c) 2022 danielbenard.com</footer>
