--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <p>important Paragraph</p>
     <p>important paragraph 1</p>
     <p>important paragraph 2</p>
+    <p>important paragraph 3</p>
+    <p>important paragraph 4</p>
     <p>New paragraph</p>
     <a href="./about.html">About page</a>
     <footer>Copyright (c) 2022 danielbenard.com</footer>
